<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cambio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/black"
        android:text="@string/introduce_web1"/>


    <EditText
        android:id="@+id/dirPag1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/ejemplo_pag1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/black"
        android:text="@string/introduce_web2"/>

    <EditText
        android:id="@+id/dirPag2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/ejemplo_pag2"/>

    <Button
        android:id="@+id/cambioPag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="cambio"
        android:text="@string/boton_cambiar_web" />

    <ProgressBar
        android:id="@+id/barra2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:progress="0"/>



    <ImageView
        android:id="@+id/sonic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/sonic"
        android:visibility="invisible"/>

</LinearLayout>